# PhotoBatch

./: CMakeLists.txt  README.md
src/: ArgumentParser.cpp  ArgumentParser.h  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  ModeFactory.cpp  ModeFactory.h  OperationMode.cpp  OperationMode.h  PhotoBatch.cpp  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  STBDef.cpp  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h
